-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
None
-
Cray Routers running latest Lustre pre-2.8
-
3
-
9223372036854775807
While testing the latest Lustre pre-2.8 release on one of our Cray systems DVS was enabled by mistake on a router which LNet then crashed with the following backtrace:
2015-10-27T11:39:24.142188-04:00 c0-1c1s1n1 Pid: 16118, comm: router_checker
2015-10-27T11:39:24.142197-04:00 c0-1c1s1n1 Call Trace:
2015-10-27T11:39:24.142213-04:00 c0-1c1s1n1 [<ffffffff81006651>] try_stack_unwind+0x161/0x1a0
2015-10-27T11:39:24.142225-04:00 c0-1c1s1n1 [<ffffffff81004eb9>] dump_trace+0x89/0x430
2015-10-27T11:39:24.142240-04:00 c0-1c1s1n1 [<ffffffffa025b897>] libcfs_debug_dumpstack+0x57/0x80 [libcfs]
2015-10-27T11:39:24.142255-04:00 c0-1c1s1n1 [<ffffffffa025bde7>] lbug_with_loc+0x47/0xc0 [libcfs]
2015-10-27T11:39:24.181560-04:00 c0-1c1s1n1 [<ffffffffa02f29b6>] lnet_router_checker+0x566/0x5a0 [lnet]
2015-10-27T11:39:24.181581-04:00 c0-1c1s1n1 [<ffffffff81067ace>] kthread+0x9e/0xb0
2015-10-27T11:39:24.181609-04:00 c0-1c1s1n1 [<ffffffff81490074>] kernel_thread_helper+0x4/0x10
2015-10-27T11:39:24.181616-04:00 c0-1c1s1n1 Kernel panic - not syncing: LBUG
2015-10-27T11:39:24.181627-04:00 c0-1c1s1n1 Pid: 16118, comm: router_checker Tainted: P 3.0.101-0.46.1_1.0502.8871-cray_gem_s #1
2015-10-27T11:39:24.211395-04:00 c0-1c1s1n1 Call Trace:
2015-10-27T11:39:24.211415-04:00 c0-1c1s1n1 [<ffffffff81006651>] try_stack_unwind+0x161/0x1a0
2015-10-27T11:39:24.211422-04:00 c0-1c1s1n1 [<ffffffff81004eb9>] dump_trace+0x89/0x430
2015-10-27T11:39:24.211476-04:00 c0-1c1s1n1 [<ffffffff810060bc>] show_trace_log_lvl+0x5c/0x80
2015-10-27T11:39:24.211488-04:00 c0-1c1s1n1 [<ffffffff810060f5>] show_trace+0x15/0x20
2015-10-27T11:39:24.211515-04:00 c0-1c1s1n1 [<ffffffff8148b31c>] dump_stack+0x79/0x84
2015-10-27T11:39:24.211531-04:00 c0-1c1s1n1 [<ffffffff8148b3bb>] panic+0x94/0x1da
2015-10-27T11:39:24.211560-04:00 c0-1c1s1n1 [<ffffffffa025be4b>] lbug_with_loc+0xab/0xc0 [libcfs]
2015-10-27T11:39:24.211579-04:00 c0-1c1s1n1 [<ffffffffa02f29b6>] lnet_router_checker+0x566/0x5a0 [lnet]
2015-10-27T11:39:24.211586-04:00 c0-1c1s1n1 [<ffffffff81067ace>] kthread+0x9e/0xb0
2015-10-27T11:39:24.241857-04:00 c0-1c1s1n1 [<ffffffff81490074>] kernel_thread_helper+0x4/0x10
While DVS is a external utility on top of LNet it shouldn't be able to crash a LNet router.