lnet/lnet/router.c
@@ -1234,8 +1234,6 @@ lnet_router_checker(void *arg)
 
 	cfs_block_allsigs();
 
-	LASSERT (the_lnet.ln_rc_state == LNET_RC_STATE_RUNNING);
-
 	while (the_lnet.ln_rc_state == LNET_RC_STATE_RUNNING) {
 		__u64	version;
 		int	cpt;
@@ -1288,8 +1286,6 @@ rescan:
 							 false,
 							 cfs_time_seconds(1));
 	}
-
-	LASSERT(the_lnet.ln_rc_state == LNET_RC_STATE_STOPPING);
 
 	lnet_prune_rc_data(1); /* wait for UNLINK */
 
